feature: selection limit modal

--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -442,6 +442,11 @@ resources_box_no_content_but_sets_1,Es gibt keine Medieneinträge für diese Suc
 resources_box_no_content_but_sets_2,Sets,Sets,
 resources_box_no_content_but_sets_3, gefunden., gefunden.,
 resources_box_title_count_post,Inhalte,Items,
+resources_box_selection_limit_page_1,"Die Seite kann nicht selektiert werden, da sonst die maximale Anzahl von ","Die Seite kann nicht selektiert werden, da sonst die maximale Anzahl von ",
+resources_box_selection_limit_page_2," ausgewählten Inhalten überstiegen würde."," ausgewählten Inhalten überstiegen würde.",
+resources_box_selection_limit_single_1,"Der Inhalt kann nicht selektiert werden, da sonst die maximale Anzahl von ","Der Inhalt kann nicht selektiert werden, da sonst die maximale Anzahl von ",
+resources_box_selection_limit_single_2," ausgewählten Inhalten überstiegen würde."," ausgewählten Inhalten überstiegen würde.",
+resources_box_selection_limit_ok,Ok,Ok,
 resources_header_show_all,alle anzeigen,show all,
 search_btn_search,Suchen,Search,
 clipboard_batch_add_success,Die Inhalte wurden der Stapelverarbeitung hinzugefügt.,Die Inhalte wurden der Stapelverarbeitung hinzugefügt.,
