fix: texts for entry and set dropdowns

--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -386,17 +386,23 @@ relations_parents_title,Übergeordnete Sets,Parents,
 relations_siblings_title,Benachbarte Sets,Siblings,
 relations_title,Zusammenhänge,Relations,
 release_info,Release Info,Release Info,
-resource_action_destroy,Medieneintrag löschen,Delete media entry,
-resource_action_disfavor,Aus Favoriten entfernen,Remove from favorites,
-resource_action_edit_cover,Titelbild festlegen,Define cover,
-resource_action_edit_custom_urls,Sprechende Adressesn,Sprechende Adressen,
-resource_action_edit_highlights,Inhalte hervorheben,Highlight contents,
-resource_action_edit,Editieren,Edit,
-resource_action_export,Exportieren,Download,
-resource_action_favor,Zu Favoriten hinzufügen,Add to favorites,
-resource_action_manage_collections,Zu Sets hinzufügen/Aus Sets entfernen,Add to/Remove from sets,
-resource_action_share_media_entry,Medieneintrag teilen,Medieneintrag teilen,
-resource_action_share_collection,Set teilen,Set teilen,
+resource_action_media_entry_edit_metadata,Metadaten editieren,Metadaten editieren,
+resource_action_media_entry_favor,Zu Favoriten hinzufügen,Zu Favoriten hinzufügen,
+resource_action_media_entry_disfavor,Aus Favoriten entfernen,Aus Favoriten entfernen,
+resource_action_media_entry_select_collection,Zu Set hinzufügen/entfernen,Zu Set hinzufügen/entfernen,
+resource_action_media_entry_share,Medieneintrag teilen,Medieneintrag teilen,
+resource_action_media_entry_edit_custom_urls,Sprechende Adressen verwalten,Sprechende Adressen verwalten,
+resource_action_media_entry_export,Medieneintrag exportieren,Medieneintrag exportieren,
+resource_action_media_entry_destroy,Medieneintrag löschen,Medieneintrag löschen,
+resource_action_collection_edit_metadata,Metadaten editieren,Metadaten editieren,
+resource_action_collection_favor,Zu Favoriten hinzufügen,Zu Favoriten hinzufügen,
+resource_action_collection_disfavor,Aus Favoriten entfernen,Aus Favoriten entfernen,
+resource_action_collection_select_collection,Zu Set hinzufügen/entfernen,Zu Set hinzufügen/entfernen,
+resource_action_collection_share,Set teilen,Set teilen,
+resource_action_collection_edit_cover,Titelbild festlegen,Titelbild festlegen,
+resource_action_collection_edit_highlight,Inhalte hervorheben,Inhalte hervorheben,
+resource_action_collection_edit_custom_urls,Sprechende Adressen verwalten,Sprechende Adressen verwalten,
+resource_action_collection_destroy,Set löschen,Set löschen,
 resource_ask_delete_cancel,Abbrechen,Cancel,
 resource_ask_delete_ok,Löschen,Delete,
 resource_ask_delete_question_post,?,?,
