fix: do not show empty resource actions dropdown; change texts

--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -386,10 +386,11 @@ relations_parents_title,Übergeordnete Sets,Parents,
 relations_siblings_title,Benachbarte Sets,Siblings,
 relations_title,Zusammenhänge,Relations,
 release_info,Release Info,Release Info,
+resource_action_more_actions,Weitere Aktionen,Weitere Aktionen,
 resource_action_media_entry_edit_metadata,Metadaten editieren,Metadaten editieren,
 resource_action_media_entry_favor,Zu Favoriten hinzufügen,Zu Favoriten hinzufügen,
 resource_action_media_entry_disfavor,Aus Favoriten entfernen,Aus Favoriten entfernen,
-resource_action_media_entry_select_collection,Zu Set hinzufügen/entfernen,Zu Set hinzufügen/entfernen,
+resource_action_media_entry_select_collection,Zu Sets hinzufügen / Aus Sets entfernen,Zu Sets hinzufügen / Aus Sets entfernen,
 resource_action_media_entry_share,Medieneintrag teilen,Medieneintrag teilen,
 resource_action_media_entry_edit_custom_urls,Sprechende Adressen verwalten,Sprechende Adressen verwalten,
 resource_action_media_entry_export,Medieneintrag exportieren,Medieneintrag exportieren,
