feature: improve dashboard

--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -161,6 +161,8 @@ dashboard_create_collection,Set erstellen,Create set,
 dashboard_create_media_entry_btn,Medien importieren,Upload Media,
 dashboard_title_head,Mein Archiv,My Archive,
 dashboard_welcome_msg,Willkommen im Medienarchiv der Künste!,Welcome to Madek!,
+dashboard_none_exist,Keine vorhanden.,Keine vorhanden.,
+dashboard_show_all,Alle anzeigen,Show all,
 share_title_media_entry,Medieneintrag teilen,Medieneintrag teilen,
 share_title_collection,Set teilen,Set teilen,
 share_uuid_url_subtitle,URL teilen,URL teilen,
@@ -189,6 +191,7 @@ edit_custom_urls_transfer_hint,"Eine bereits bestehende Adresse kann von einem M
 edit_custom_urls_transfer_title,Übertragen,Übertragen,
 edit_custom_urls_transfer,Übertragen,Übertragen,
 external_groups,Abteilungsgruppen,Division groups,
+authentication_groups,Systemgruppen,Systemgruppen,
 group_ask_delete_cancel,Abbrechen,Cancel,
 group_ask_delete_delete,Löschen,Delete,
 group_ask_delete_question_post, löschen?,?,
@@ -454,7 +457,6 @@ resources_box_selection_limit_page_2," ausgewählten Inhalten überstiegen würd
 resources_box_selection_limit_single_1,"Der Inhalt kann nicht selektiert werden, da sonst die maximale Anzahl von ","Der Inhalt kann nicht selektiert werden, da sonst die maximale Anzahl von ",
 resources_box_selection_limit_single_2," ausgewählten Inhalten überstiegen würde."," ausgewählten Inhalten überstiegen würde.",
 resources_box_selection_limit_ok,Ok,Ok,
-resources_header_show_all,alle anzeigen,show all,
 search_btn_search,Suchen,Search,
 clipboard_batch_add_success,Die Inhalte wurden der Stapelverarbeitung hinzugefügt.,Die Inhalte wurden der Stapelverarbeitung hinzugefügt.,
 clipboard_batch_remove_success,Die Inhalte wurden aus der Stapelverarbeitung entfernt.,Die Inhalte wurden aus der Stapelverarbeitung entfernt.,
