feature: support batch edit for whole sets

--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -434,6 +434,10 @@ resources_box_batch_actions_addalltoclipboard_1,Alle ,Add all ,
 resources_box_batch_actions_addalltoclipboard_2, zur Stapelverarbeitung hinzufügen, to Clipboard,
 resources_box_batch_actions_removeallfromclipboard_1,Alle ,Remove all ,
 resources_box_batch_actions_removeallfromclipboard_2, aus der Stapelverarbeitung entfernen, from Clipboard,
+resources_box_batch_actions_edit_all_media_entries_1,Alle ,Alle ,
+resources_box_batch_actions_edit_all_media_entries_2, Metadaten von Medieneinträgen editieren, Metadaten von Medieneinträgen editieren,
+resources_box_batch_actions_edit_all_collections_1,Alle ,Alle ,
+resources_box_batch_actions_edit_all_collections_2, Metadaten von Sets editieren, Metadaten von Sets editieren,
 resources_box_batch_actions_addselectedtoclipboard,Ausgewählte zur Stapelverarbeitung hinzufügen,Add selected to Clipboard,
 resources_box_batch_actions_removefromclipboard,Ausgewählte aus der Stapelverarbeitung entfernen,Remove selected from Clipboard,
 resources_box_batch_actions_addtoset,Ausgewählte zu Set hinzufügen,Add selected to Set,
