fix: icons and labels

--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -504,10 +504,17 @@ sitemap_search,Suche,Search,
 sitemap_vocabulary,Vokabular,Vocabulary,
 sitemap_vocabularies,Vokabulare,Vocabularies,
 sitemap_clipboard,Stapelverarbeitung,Stapelverarbeitung,
+sitemap_activities,Aktivitäten,Aktivitäten,
+sitemap_tokens,Tokens,Tokens,
+section_title_media_entries,Meine Medieneinträge,Meine Medieneinträge,
+section_title_collections,Meine Sets,Meine Sets,
+section_title_groups,Meine Arbeitsgruppen,Meine Arbeitsgruppen,
+section_title_keywords,Meine Schlagworte,Meine Schlagworte,
+section_title_tokens,Meine Tokens,Meine Tokens,
 user_menu_my_content_collections,Meine Sets,My sets,
 user_menu_my_content_media_entries,Meine Medieneinträge,My media entries,
-user_menu_my_favorite_collections,Meine Favoriten - Sets,My favorites - sets,
-user_menu_my_favorite_media_entries,Meine Favoriten - Medieneinträge,My favorites - media entries,
+user_menu_my_favorite_collections,Favoriten - Sets,Favorites - sets,
+user_menu_my_favorite_media_entries,Favoriten - Medieneinträge,Favorites - media entries,
 user_menu_my_groups,Meine Arbeitsgruppen,My work groups,
 transfer_responsibility_batch_success_collection_1,Sie haben für ,Sie haben für ,
 transfer_responsibility_batch_success_collection_1a, Set , Set ,
