feature: show all meta data edit in dropdown for mixed resources; only batch edit authorized resources

--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -306,6 +306,8 @@ meta_data_batch_summary_were_published, hatten bereits ausgefüllte Pflichtfelde
 meta_data_batch_title_post_collections, Sets gleichzeitig editieren, sets at once,
 meta_data_batch_title_post_media_entries, Medieneinträge gleichzeitig editieren, media entries at once,
 meta_data_batch_title_pre,Metadaten für ,Edit metadata for ,
+meta_data_batch_some_ignored_1,(,(,
+meta_data_batch_some_ignored_2," Einträge wurden ignoriert, da Sie nicht über die nötige Berechtigung verfügen)"," Einträge wurden ignoriert, da Sie nicht über die nötige Berechtigung verfügen)",
 meta_data_blank_value_for_required_meta_key_post,!,!,
 meta_data_blank_value_for_required_meta_key_post,!,!,
 meta_data_blank_value_for_required_meta_key_pre,Metadatum-Wert nicht vorhanden für Meta-Key ,Blank metadatum value for meta key ,
@@ -434,10 +436,8 @@ resources_box_batch_actions_addalltoclipboard_1,Alle ,Add all ,
 resources_box_batch_actions_addalltoclipboard_2, zur Stapelverarbeitung hinzufügen, to Clipboard,
 resources_box_batch_actions_removeallfromclipboard_1,Alle ,Remove all ,
 resources_box_batch_actions_removeallfromclipboard_2, aus der Stapelverarbeitung entfernen, from Clipboard,
-resources_box_batch_actions_edit_all_media_entries_1,Alle ,Alle ,
-resources_box_batch_actions_edit_all_media_entries_2, Metadaten von Medieneinträgen editieren, Metadaten von Medieneinträgen editieren,
-resources_box_batch_actions_edit_all_collections_1,Alle ,Alle ,
-resources_box_batch_actions_edit_all_collections_2, Metadaten von Sets editieren, Metadaten von Sets editieren,
+resources_box_batch_actions_edit_all_media_entries,Metadaten von allen Medieneinträgen editieren,Metadaten von allen Medieneinträgen editieren,
+resources_box_batch_actions_edit_all_collections,Metadaten von allen Sets editieren,Metadaten von allen Sets editieren,
 resources_box_batch_actions_addselectedtoclipboard,Ausgewählte zur Stapelverarbeitung hinzufügen,Add selected to Clipboard,
 resources_box_batch_actions_removefromclipboard,Ausgewählte aus der Stapelverarbeitung entfernen,Remove selected from Clipboard,
 resources_box_batch_actions_addtoset,Ausgewählte zu Set hinzufügen,Add selected to Set,
