fix: show warning if you batch edit empty resources or not authorized resources

--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -50,6 +50,10 @@ batch_destroy_resources_ask_4,(Die Inhalte von Sets werden nicht automatisch mit
 batch_destroy_resources_ok,Ok,Ok,
 batch_destroy_resources_cancel,Abbrechen,Abbrechen,
 batch_destroy_resources_success,Inhalte wurden erfolgreich gelöscht.,Inhalte wurden erfolgreich gelöscht.,
+batch_warning_no_contents_media_entry,"Sie haben keine Einträge.","Sie haben keine Einträge.",
+batch_warning_no_contents_collection,"Sie haben keine Sets.","Sie haben keine Sets.",
+batch_warning_no_authorized_contents_media_entry,"Sie haben für keinen der Einträge die nötige Berechtigung.","Sie haben für keinen der Einträge die nötige Berechtigung.",
+batch_warning_no_authorized_contents_collection,"Sie haben für keines der Sets die nötige Berechtigung.","Sie haben für keines der Sets die nötige Berechtigung.",
 btn_delete_confirm_msq,"Sind Sie sicher, dass Sie diesen Inhalt löschen wollen?",Are you sure you want to delete this item?,
 btn_delete_text,Löschen,Delete,
 btn_publish_confirm_msg,"Sind Sie sicher, dass Sie diesen Inhalt sichern wollen?",Are you sure you want to publish this item?,
