fix: wording and route naming

--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -269,7 +269,7 @@ media_entry_file_format_not_supported_1,"Your browser does most likely not suppo
 media_entry_file_format_not_supported_2,download the file,download the file,
 media_entry_file_format_not_supported_3,.,.,
 media_entry_file_information_title,Datei,File Information,
-media_entry_media_import_gotodrafts,Vervollständige Medieneinträge,Vervollständige Medieneinträge,
+media_entry_media_import_gotodrafts,Medieneinträge vervollständigen,Medieneinträge vervollständigen,
 media_entry_media_import_header,Medien importieren,Media upload,
 media_entry_media_import_inside_nojs,Dateien auswählen,Select Files,
 media_entry_media_import_inside,Dateien auf dieses Feld ziehen oder,Drag & drop files here or,
@@ -468,6 +468,7 @@ resources_box_selection_limit_page_2," ausgewählten Inhalten überstiegen würd
 resources_box_selection_limit_single_1,"Der Inhalt kann nicht selektiert werden, da sonst die maximale Anzahl von ","Der Inhalt kann nicht selektiert werden, da sonst die maximale Anzahl von ",
 resources_box_selection_limit_single_2," ausgewählten Inhalten überstiegen würde."," ausgewählten Inhalten überstiegen würde.",
 resources_box_selection_limit_ok,Ok,Ok,
+resources_box_new_search,Neue Suche,Neue Suche,
 search_btn_search,Suchen,Search,
 clipboard_batch_add_success,Die Inhalte wurden der Stapelverarbeitung hinzugefügt.,Die Inhalte wurden der Stapelverarbeitung hinzugefügt.,
 clipboard_batch_remove_success,Die Inhalte wurden aus der Stapelverarbeitung entfernt.,Die Inhalte wurden aus der Stapelverarbeitung entfernt.,
@@ -560,10 +561,10 @@ vocabularies_all,Alle Vokabulare,All Vocabularies,
 vocabularies_contents_hint_1,"Alle Inhalte mit Metadaten des Vokabulars ","Alle Inhalte mit Metadaten des Vokabulars ",
 vocabularies_contents_hint_2,". Sie sehen nur Inhalte, für die Sie berechtigt sind.",". Sie sehen nur Inhalte, für die Sie berechtigt sind.",
 vocabularies_keywords_hint_1,Alle im Vokabular ,Alle im Vokabular ,
-vocabularies_keywords_hint_2, enthaltenen Schlagwörter und die dazugehörenden Metadatenfelder., enthaltenen Schlagwörter und die dazugehörenden Metadatenfelder.,
+vocabularies_keywords_hint_2, enthaltenen Schlagworte und die dazugehörenden Metadatenfelder., enthaltenen Schlagworte und die dazugehörenden Metadatenfelder.,
 vocabularies_no_keywords,Keine Schlagworte vorhanden.,Keine Schlagworte vorhanden.,
-vocabularies_tabs_contents,Inhalte,Contents,
-vocabularies_tabs_keywords,Schlagwörter,Keywords,
+vocabularies_tabs_contents,Inhalte,Content,
+vocabularies_tabs_keywords,Schlagworte,Keywords,
 vocabularies_tabs_permissions,Berechtigungen,Permissions,
 vocabulary_permissions_hint1,"Für dieses Vokabular sind die Berechtigungen "Betrachten" und "Anwenden" vergeben. Wenn Sie Mitglied einer berechtigten Arbeitsgruppe sind, können Sie Personen zu dieser hinzufügen.","Für dieses Vokabular sind die Berechtigungen "Betrachten" und "Anwenden" vergeben. Wenn Sie Mitglied einer berechtigten Arbeitsgruppe sind, können Sie Personen zu dieser hinzufügen.",
 vocabulary_permissions_hint2,"Weitere Berechtigungen für Personen, Arbeitsgruppen, API-Applikationen oder die Öffentlichkeit werden durch den Administrator vergeben – bitte wenden Sie sich an den Support.","Weitere Berechtigungen für Personen, Arbeitsgruppen, API-Applikationen oder die Öffentlichkeit werden durch den Administrator vergeben – bitte wenden Sie sich an den Support.",
