fix: change „alle n von stapel entfernen“ to „stapel leeren“ since always all are removed, even if you only show sets or entries

--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -441,8 +441,7 @@ resource_select_collection_search,Suchen,Search,
 resource_select_collection_title,Zu Set hinzufügen/entfernen,Add to/remove from set,
 resources_box_batch_actions_addalltoclipboard_1,Alle ,Add all ,
 resources_box_batch_actions_addalltoclipboard_2, zur Stapelverarbeitung hinzufügen, to Clipboard,
-resources_box_batch_actions_removeallfromclipboard_1,Alle ,Remove all ,
-resources_box_batch_actions_removeallfromclipboard_2, aus der Stapelverarbeitung entfernen, from Clipboard,
+resources_box_batch_actions_clear_clipboard,Stapelverarbeitung leeren,Stapelverarbeitung leeren,
 resources_box_batch_actions_edit_all_media_entries,Metadaten von allen Medieneinträgen editieren,Metadaten von allen Medieneinträgen editieren,
 resources_box_batch_actions_edit_all_collections,Metadaten von allen Sets editieren,Metadaten von allen Sets editieren,
 resources_box_batch_actions_addselectedtoclipboard,Ausgewählte zur Stapelverarbeitung hinzufügen,Add selected to Clipboard,
