--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -392,6 +392,8 @@ permissions_table_save_btn,Speichern,Save,
 permissions_responsibility_title,Verantwortlichkeit,Verantwortlichkeit,
 permissions_table_title,Zugriffsberechtigungen,Zugriffsberechtigungen,
 permissions_transfer_responsibility_link,Verantwortlichkeit übertragen,Verantwortlichkeit übertragen,
+person_show_first_name,Vorname,First name,
+person_show_last_name,Nachname,Last name,
 picture_alt_fallback,(unbekannt),(unkown),
 picture_alt_prefix,Bild: ,Picture:,
 relations_parents_title,Übergeordnete Sets,Parents,
