--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -336,6 +336,7 @@ meta_data_batch_title_post_media_entries, Medieneinträge gleichzeitig editieren
 meta_data_batch_title_pre,Metadaten für ,Edit metadata for ,
 meta_data_batch_some_ignored_1,(,(,
 meta_data_batch_some_ignored_2," Einträge wurden ignoriert, da Sie nicht über die nötige Berechtigung verfügen)"," Einträge wurden ignoriert, da Sie nicht über die nötige Berechtigung verfügen)",
+meta_data_batch_action_remove_meta_data,Werte für alle Inhalte löschen,Werte für alle Inhalte löschen,
 meta_data_blank_value_for_required_meta_key_post,!,!,
 meta_data_blank_value_for_required_meta_key_post,!,!,
 meta_data_blank_value_for_required_meta_key_pre,Metadatum-Wert nicht vorhanden für Meta-Key ,Blank metadatum value for meta key ,
