feat: resource link to admin interface

--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -446,6 +446,7 @@ resource_action_collection_edit_cover,Titelbild festlegen,Titelbild festlegen,
 resource_action_collection_edit_highlight,Inhalte hervorheben,Inhalte hervorheben,
 resource_action_collection_edit_custom_urls,Sprechende Adressen verwalten,Sprechende Adressen verwalten,
 resource_action_collection_destroy,Set löschen,Set löschen,
+resource_action_show_in_admin,Zeige im Admin-Interface,Show in Admin Interface,
 resource_ask_delete_cancel,Abbrechen,Cancel,
 resource_ask_delete_ok,Löschen,Delete,
 resource_ask_delete_question_post,?,?,
