feat: show deactivated user as Gelöschter User

--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -567,6 +567,7 @@ user_menu_my_content_media_entries,Meine Medieneinträge,My media entries,
 user_menu_my_favorite_collections,Favoriten - Sets,Favorites - sets,
 user_menu_my_favorite_media_entries,Favoriten - Medieneinträge,Favorites - media entries,
 user_menu_my_groups,Meine Arbeitsgruppen,My work groups,
+user_name_deactivated,Gelöschter User,Deleted user,
 transfer_responsibility_batch_success_collection_1,Sie haben für ,Sie haben für ,
 transfer_responsibility_batch_success_collection_1a, Set , Set ,
 transfer_responsibility_batch_success_collection_1b, Sets , Sets ,
