feature: vocabulary people

--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -607,10 +607,14 @@ vocabularies_contents_hint_1,"Alle Inhalte mit Metadaten des Vokabulars ","Alle 
 vocabularies_contents_hint_2,". Sie sehen nur Inhalte, für die Sie berechtigt sind.",". Sie sehen nur Inhalte, für die Sie berechtigt sind.",
 vocabularies_keywords_hint_1,Alle im Vokabular ,Alle im Vokabular ,
 vocabularies_keywords_hint_2, enthaltenen Schlagworte und die dazugehörenden Metadatenfelder., enthaltenen Schlagworte und die dazugehörenden Metadatenfelder.,
+vocabularies_people_hint_1,Alle im Vokabular ,Alle im Vokabular ,
+vocabularies_people_hint_2, enthaltenen Personen und die dazugehörenden Metadatenfelder., enthaltenen Personen und die dazugehörenden Metadatenfelder.,
 vocabularies_no_description,(Keine Beschreibung),(No description available),
 vocabularies_no_keywords,Keine Schlagworte vorhanden.,Keine Schlagworte vorhanden.,
+vocabularies_no_people,Keine Personen vorhanden.,Keine Personen vorhanden.,
 vocabularies_tabs_contents,Inhalte,Contents,
 vocabularies_tabs_keywords,Schlagworte,Keywords,
+vocabularies_tabs_people,Personen,People,
 vocabularies_tabs_permissions,Berechtigungen,Permissions,
 vocabulary_permissions_hint1,"Für dieses Vokabular sind die Berechtigungen "Betrachten" und "Anwenden" vergeben. Wenn Sie Mitglied einer berechtigten Arbeitsgruppe sind, können Sie Personen zu dieser hinzufügen.","Für dieses Vokabular sind die Berechtigungen "Betrachten" und "Anwenden" vergeben. Wenn Sie Mitglied einer berechtigten Arbeitsgruppe sind, können Sie Personen zu dieser hinzufügen.",
 vocabulary_permissions_hint2,"Weitere Berechtigungen für Personen, Arbeitsgruppen, API-Applikationen oder die Öffentlichkeit werden durch den Administrator vergeben – bitte wenden Sie sich an den Support.","Weitere Berechtigungen für Personen, Arbeitsgruppen, API-Applikationen oder die Öffentlichkeit werden durch den Administrator vergeben – bitte wenden Sie sich an den Support.",
