feat: error translations

--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -633,3 +633,9 @@ browse_entries_title,"Nach ähnlichen Inhalten stöbern","Browse similar entries
 browse_entries_filter_link,"Weiter filtern →","Filter this →",
 browse_entries_browse_link_title,"In diese Richtung weiterstöbern","Browse in this direction",
 browse_entries_loading_error,Ladefehler!,Loading error!,
+error_401_title,"Um Zugang zu diesem Bereich zu erhalten, melden Sie sich bitte an.",To get access please login below with your user data.,
+error_403_title,Sie haben keine Zugriffsrechte für diesen Inhalt.,You don’t have the necessary permissions to access this resource.,
+error_403_message,Bitte kontaktieren Sie die für den Medieneintrag oder das Sets verantwortliche Person.,Please contact the responsible user who has the right alllow access.,
+error_404_title,Die gesuchte Seite kann nicht gefunden werden.,The requested page cannot be found.,
+error_500_title,Es ist ein Server-Fehler aufgetreten.,A server error occurred.,
+error_500_message,"Benötigen Sie diesbezüglich Hilfe, dann kontaktieren Sie bitte den Support (support.medienarchiv@zhdk.ch) mit einer Beschreibung Ihrer letzten Arbeitsschritte sowie einem Screenshot dieser Seite.","If you require help in this matter, please contact the support (support.medienarchiv@zhdk.ch) with a description of your last working steps and a screen shot of this page.",
