feat: people#show: list URI and description

--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -419,6 +419,8 @@ permissions_table_title,Zugriffsberechtigungen,Zugriffsberechtigungen,
 permissions_transfer_responsibility_link,Verantwortlichkeit übertragen,Verantwortlichkeit übertragen,
 person_show_first_name,Vorname,First name,
 person_show_last_name,Nachname,Last name,
+person_show_external_uri,"URI","URI",
+person_show_description,"Beschreibung","Description",
 picture_alt_fallback,(unbekannt),(unkown),
 picture_alt_prefix,Bild: ,Picture:,
 relations_parents_title,Übergeordnete Sets,Parents,
