feat: confidential links

--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -22,7 +22,7 @@ api_tokens_head_valid_since,Gültig seit,Valid from,
 api_tokens_head_valid_until,Gültig bis,Valid to,
 api_tokens_list_created_hint_pre,Erstellt: ,Created: ,"Tooltip auf dem Datum in der Tokens-Tabelle, wird vor einem Zeitstempel angezeigt"
 api_tokens_list_expires_hint_pre,Ablaufdatum: ,Expiration date: ,"Tooltip auf dem Datum in der Tokens-Tabelle, wird vor einem Zeitstempel angezeigt"
-api_tokens_list_new_button,Neuen Token erstellen,Create new tolken,
+api_tokens_list_new_button,Neuen Token erstellen,Create new token,
 api_tokens_list_no_description,(Keine Beschreibung),No description),"Platzhalter-Text, falls ein Token keine Beschreibung hat."
 api_tokens_list_revoke_btn_hint,Token zurückziehen.,Revoke token.,
 api_tokens_list_revoke_confirm,"Sind Sie sicher, dass Sie diesen Token zurückziehen wollen?",Are you sure you want to revoke the token?,
@@ -462,6 +462,7 @@ resource_action_media_entry_edit_custom_urls,Sprechende Adressen verwalten,Manag
 resource_action_media_entry_edit_metadata,Metadaten editieren,Edit metadata,
 resource_action_media_entry_export,Medieneintrag exportieren,Export media entry,
 resource_action_media_entry_favor,Zu Favoriten hinzufügen,Add to favorites,
+resource_action_media_entry_manage_confidential_links,Vertrauliche Links verwalten,Manage Confidential Links,
 resource_action_media_entry_select_collection,Zu Sets hinzufügen / Aus Sets entfernen,Add to/remove from set,
 resource_action_media_entry_share,Medieneintrag teilen,Share media entry,
 resource_action_more_actions,Weitere Aktionen,Further actions,
@@ -631,6 +632,34 @@ sitemap_search,Suche,Search,
 sitemap_tokens,Tokens,Tokens,
 sitemap_vocabularies,Vokabulare,Vocabularies,
 sitemap_vocabulary,Vokabular,Vocabulary,
+confidential_links_header,Vertrauliche Links,Confidential Links,
+confidential_links_title_pre,Vertrauliche Links für ,Confidential Links for ,
+confidential_links_title_post,Zurück zum Set,Back to the set,
+confidential_links_back_to_media_entry,Zurück zum Medieneintrag,Back to the media entry,
+confidential_links_create_title,Neuen Vertraulichen Link erstellen,Create a new Confidential Link,
+confidential_links_create_description,Beschreibung,Description,
+confidential_links_create_submit,Vertraulichen Link erstellen,Create Confidential Link,
+confidential_links_create_set_expiration_date,Ablaufdatum einstellen,Set expiration date,
+confidential_links_create_cancel,Abbrechen,Cancel,
+confidential_links_created_title,Neuer Vertraulicher Link erstellt,New Confidential Link created,
+confidential_links_created_back_btn,Zurück zu allen Vertraulichen Links,Go back to all Confidential Links,
+confidential_links_created_notice,"Vertraulicher Link erstellt!","Confidential Link was created!",
+confidential_links_list_created_hint_pre,Erstellt: ,Created: ,
+confidential_links_list_expires_hint_pre,Ablaufdatum: ,Expiration date: ,
+confidential_links_list_no_expiry,Nie,Never,
+confidential_links_list_new_button,Neuen Vertraulichen Link erstellen,Add a new Confidential Link,
+confidential_links_list_no_description,(Keine Beschreibung),(No description),
+confidential_links_list_revoke_btn_hint,Vertraulichen Link zurückziehen,Revoke Confidential Link,
+confidential_links_list_revoke_confirm,"Sind Sie sicher, dass Sie diesen Vertraulichen Link zurückziehen wollen?","Are you sure you want to revoke this Confidential Link?",
+confidential_links_list_revoked_title,Abgelaufene Vertrauliche Links,Expired Confidential Links,
+confidential_links_list_show_url,Link anzeigen,Show Link,
+confidential_links_list_copy_url,Vertraulichen Link kopieren,Copy Confidential Link,
+confidential_links_head_id,ID,ID,
+confidential_links_head_name,Name,Name,
+confidential_links_head_token,Token,Token,
+confidential_links_head_valid_since,Erstellt am,Created at,
+confidential_links_head_valid_until,Läuft ab,Expires at,
+confidential_links_show_title,Vertraulicher Link,Confidential Link,
 transfer_responsibility_batch_success_collection_1,Sie haben für ,You have successfully transferred responsibility for ,
 transfer_responsibility_batch_success_collection_1a, Set , set ,
 transfer_responsibility_batch_success_collection_1b, Sets , sets ,
