feat: add language switcher to the footer

--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -213,6 +213,7 @@ explore_show_more,Weitere anzeigen,Show more,
 explore_vocabulary_section_show_details,Details anzeigen,View details,
 explore_vovabulary_section_title,Vokabulare,Vocabularies,
 external_groups,Abteilungsgruppen,Division groups,
+footer_choose_language,Sprache wählen,Choose language,
 group_ask_delete_cancel,Abbrechen,Cancel,
 group_ask_delete_delete,Löschen,Delete,
 group_ask_delete_question_post, löschen?,?,
