fix: add missing translations in form used to create group or person

--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -371,7 +371,11 @@ meta_data_input_date_type_text,Freie Eingabe,Free text entry,
 meta_data_input_date_type_timestamp,am,on,
 meta_data_input_keywords_existing,Schlagwort ist bereits vergeben.,Keyword already assigned.,
 meta_data_input_new_group_add,Arbeitsgruppe einfügen,Add work group,
+meta_data_input_new_group_name,Name,Name,
 meta_data_input_new_person_add,Person einfügen,Add person,
+meta_data_input_new_person_first_name,Vorname,First name,
+meta_data_input_new_person_last_name,Nachname,Last name,
+meta_data_input_new_person_pseudonym,Pseudonym,Pseudonym,
 meta_data_input_new_person_toggle,Neue Person oder Gruppe anlegen,Add new person or work group,
 meta_data_input_person_save,Speichern,Save,
 meta_data_meta_key_label,Schlüssel,Key,
