--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -489,6 +489,7 @@ resources_box_batch_actions_removefromset,Aus Set entfernen,Remove from set,
 resources_box_batch_actions_sets_managepermissions,Berechtigungen von Sets editieren,Edit permissions for sets,
 resources_box_batch_actions_transfer_responsibility_entries,Verantwortlichkeit von Medieneinträgen übertragen,Transfer responsibility of media entries,
 resources_box_batch_actions_transfer_responsibility_sets,Verantwortlichkeit von Sets übertragen,Transfer responsibility of sets,
+resources_box_batch_actions_meta_data_batch,Metadaten Stapelverarbeitung,Metadata Batch Processing,
 resources_box_deselect_all,Alle abwählen,Deselect all,
 resources_box_filter,Filtern,Filter,
 resources_box_new_search,Neue Suche,New search,
@@ -506,6 +507,55 @@ resources_box_selection_limit_single_2, ausgewählten Inhalten überstiegen wür
 resources_box_selection_remove_selection,Auswahl entfernen,Remove selection,
 resources_box_selection_select,Auswählen,Select,
 resources_box_title_count_post,Inhalte,Items,
+resources_box_batch_select_fields,Felder auswählen,Select fields,
+resources_box_batch_enter_metadata,Metadaten eingeben,Enter metadata,
+resources_box_batch_close,schliessen,close,
+resources_box_batch_mandatory_fields,Pflichtfelder:,Mandatory fields:,
+resources_box_batch_mandatory_field,Pflichtfeld,Mandatory field,
+resources_box_batch_mandatory_field_for_media_entry,Pflichtfeld für Medieneinträge,Mandatory field for media entries,
+resources_box_batch_field_only_for_sets,Dieser Wert wird nur auf Sets angewendet,This value is applied only on sets,
+resources_box_batch_field_only_for_entries,Dieser Wert wird nur auf Medieneinträge angewendet,This value is applied only on media entries,
+resources_box_batch_load_all_pages,Es werden alle Inhalte geladen...,Loading all content...,
+resources_box_batch_apply_on_all_1,Auf alle Inhalte ,Apply on all ,
+resources_box_batch_apply_on_all_2, anwenden, entries,
+resources_box_batch_apply_on_selected_1,Auf ,Apply on ,
+resources_box_batch_apply_on_selected_2, Inhalte anwenden, entries,
+resources_box_batch_all_content,Alle Inhalte,All content,
+resources_box_batch_selected_content,Ausgewählte Inhalte,Selected content,
+resources_box_batch_stats_total,Total:,Total:,
+resources_box_batch_stats_where_loaded,davon geladen:,loaded:,
+resources_box_batch_stats_where_editable,davon editierbar:,editable:,
+resources_box_batch_stats_where_selected,selektiert:,selected:,
+resources_box_batch_fill_in_all_fields_hint,Bitte füllen Sie alle Felder aus oder schliessen Sie Felder ohne Eingaben. Sonst können Sie ihre Eingaben nicht speichern.,Please fill in all fields or remove the ones without data. Otherwise you cannot save the data.,
+resources_box_batch_please_wait_and_done_leave,Bitte warten und die Ansicht nicht verlassen.,Please wait and do not leave this page.,
+resources_box_batch_loading_stats_total," total, "," total, ",
+resources_box_batch_loading_stats_applying," am speichern, "," are saving, ",
+resources_box_batch_loading_stats_pending," am warten, "," are waiting, ",
+resources_box_batch_loading_stats_done," sind fertig"," are done",
+resources_box_batch_loading_stats_failed," fehlgeschlagen"," failed",
+resources_box_batch_cancel_waiting,wartende abbrechen,cancel waiting,
+resources_box_batch_processing_successful, erfolgreich verarbeitet, successfully processed,
+resources_box_batch_ignore_failures,Fehler ignorieren,Ignore failures,
+resources_box_batch_status_applying,am speichern,applying,
+resources_box_batch_status_done,fertig,done,
+resources_box_batch_status_waiting,am warten,waiting,
+resources_box_batch_status_cancelled,abgebrochen,cancelled,
+resources_box_batch_status_apply,anwenden,apply,
+resources_box_batch_status_retry,erneut,retry,
+resources_box_batch_add_to_existing,zu bestehenden hinzufügen,add to existing,
+resources_box_batch_replace_existing,bestehende ersetzen,replace existing,
+resources_box_batch_entry_contexts,Kontexte Medieneinträge,Contexts Media Entries,
+resources_box_batch_set_contexts,Kontexte Sets,Contexts Sets,
+resources_box_batch_all_data,Alle Daten,All data,
+resources_box_batch_search_placeholder,Suchen...,Search...,
+resources_box_batch_person_widget_firstname,Vorname,Firstname,
+resources_box_batch_person_widget_lastname,Nachname,Lastname,
+resources_box_batch_person_widget_pseudonym,Pseudonym,Pseudonym,
+resources_box_batch_person_widget_add_person,Person einfügen,Add person,
+resources_box_batch_person_widget_name,Name,Name,
+resources_box_batch_person_widget_add_group,Arbeitsgruppe einfügen,Add group,
+resources_box_batch_person_widget_tab_person,Person,Person,
+resources_box_batch_person_widget_tab_group,Gruppe,Group,
 resources_section_show_all,Alle anzeigen →,Show all →,
 search_btn_search,Suchen,Search,
 search_filename,Filename,File name,
