fix: merge set and entry contexts

--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -544,8 +544,7 @@ resources_box_batch_status_apply,anwenden,apply,
 resources_box_batch_status_retry,erneut,retry,
 resources_box_batch_add_to_existing,zu bestehenden hinzufügen,add to existing,
 resources_box_batch_replace_existing,bestehende ersetzen,replace existing,
-resources_box_batch_entry_contexts,Kontexte Medieneinträge,Contexts Media Entries,
-resources_box_batch_set_contexts,Kontexte Sets,Contexts Sets,
+resources_box_batch_contexts,Kontexte,Contexts,
 resources_box_batch_all_data,Alle Daten,All data,
 resources_box_batch_search_placeholder,Suchen...,Search...,
 resources_box_batch_person_widget_firstname,Vorname,Firstname,
