fix: i18n for batch dropdown action

--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -489,6 +489,7 @@ resources_box_batch_actions_removefromset,Aus Set entfernen,Remove from set,
 resources_box_batch_actions_sets_managepermissions,Berechtigungen von Sets editieren,Edit permissions for sets,
 resources_box_batch_actions_transfer_responsibility_entries,Verantwortlichkeit von Medieneinträgen übertragen,Transfer responsibility of media entries,
 resources_box_batch_actions_transfer_responsibility_sets,Verantwortlichkeit von Sets übertragen,Transfer responsibility of sets,
+resources_box_batch_actions_meta_data_batch_new,NEU:,NEW:,
 resources_box_batch_actions_meta_data_batch,Metadaten Stapelverarbeitung,Metadata Batch Processing,
 resources_box_deselect_all,Alle abwählen,Deselect all,
 resources_box_filter,Filtern,Filter,
